--- a/src/app/design/frontend/base/default/layout/googletagmanager.xml
+++ b/src/app/design/frontend/base/default/layout/googletagmanager.xml
@@ -13,5 +13,10 @@
 		<reference name="after_body_start">
 			<block type="googletagmanager/gtm" name="google_tag_manager" as="google_tag_manager" template="googletagmanager/gtm.phtml" />
 		</reference>
+		<catalog_product_view>
+			<reference name="before_body_end">
+				<block type="googletagmanager/remarketing" name="googletagmanager-remarketing" template="googletagmanager/remarketing.phtml"/>
+			</reference>
+		</catalog_product_view>
 	</default>
 </layout>
