--- a/src/app/design/frontend/base/default/template/googletagmanager/remarketing.phtml
+++ b/src/app/design/frontend/base/default/template/googletagmanager/remarketing.phtml
@@ -1,10 +1,9 @@
 <?php
 
 $config = $this->getRemarketingConfig();
-$is_active = $config['active'];
-$conversion_id = $config['conversionid'];
+$is_active = @$config['active'];
+$conversion_id = @$config['conversionid'];
 $product = $this->getProduct();
-
 if(is_object($product) && $product->getId() && $is_active && $conversion_id)
 {
     $product = $this->getProduct();
